--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,43 @@ body {
   margin-right: 0px;
   padding: 0;
 }
+/* home page */
+.home-banner {
+  background-image: url("https://dinopixel.com/preload/0519/spiderman.png");
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100vh;
+  background-color:black;
+}
 
+.content {
+  position: absolute;
+  top: 250px;
+  right: 250px;
+  font-size: 18px;
+}
+
+.content h1{
+  color: white;
+  
+}
+
+button {
+  padding: 14px 40px;
+  font-size: 20px;
+  color: white;
+  background-color: blue;
+  border: none;
+  text-shadow: 2px 2px 5px white;
+}
+button:hover {
+  padding: 14px 40px;
+  font-size: 20px;
+  background-size: cover;
+  color: black;
+  border: none;
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQxfcXILHbBaivS_9t8QaA8z7tRMrNsD8zLUQ&usqp=CAU")
+}
 /*spritesheet*/
 .back-img {
  background-image: url("https://i.pinimg.com/originals/9f/cd/d8/9fcdd8d04a99478e465ad22156cc3e84.jpg");
