--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
   margin-left: 0px;
   margin-right: 0px;
   padding: 0;
+  font-family: 'Bangers', cursive;
 }
 
 body, html {
@@ -16,7 +17,7 @@ body, html {
   background-repeat: no-repeat;
   width: 100%;
   height: 100vh;
-  background-color:black;
+  background-color:slategray;
 }
 
 .content {
@@ -33,20 +34,22 @@ body, html {
 
 button {
   padding: 14px 40px;
+  margin-top: 30px;
   font-size: 20px;
   color: white;
   background-color: blue;
   border: none;
   text-shadow: 2px 2px 5px white;
   cursor: pointer;
+  font-family: 'Bangers', cursive;
 }
 button:hover {
   padding: 14px 40px;
   font-size: 20px;
   background-size: cover;
-  color: black;
+  color: white;
   border: none;
-  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQxfcXILHbBaivS_9t8QaA8z7tRMrNsD8zLUQ&usqp=CAU");
+  background-color: red;
   cursor: pointer;
 }
 /*spritesheet*/
@@ -88,6 +91,7 @@ background-color: black;
   font-size: 20px;
   background-color: none !important; 
   border: 2px solid #f44336;
+  font-family: 'Bangers', cursive;
 }
 
 .button2:hover {
@@ -141,4 +145,95 @@ background-color: black;
 
 .content3 h1 {
   color: white;
+}
+
+/* speech bubble */
+.circular-sb {
+  width: 500px;
+  border: 5px solid black;
+  padding: 80px 0px;
+  margin: -150px auto;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 900;
+  font-family: arial;
+  position: relative;
+  color: black;
+  background-color: white;
+  font-family: 'Bangers', cursive;
+}
+
+.circle1 {
+  border: 5px solid black;
+  position: absolute;
+  width: 25px;
+  padding: 25px 25px;
+  border-radius: 50%;
+  left: -10px;
+  bottom: 10px;
+}
+
+.circle1:before {
+  content: "";
+  position: absolute;
+  width: 25px;
+  padding: 25px 25px;
+  border-radius: 50%;
+  right: 0px;
+  bottom: 0px;
+  background: #fff;
+}
+
+.circle2 {
+  border: 5px solid black;
+  background-color: white;
+  position: absolute;
+  width: 20px;
+  padding: 20px 20px;
+  border-radius: 50%;
+  left: -62px;
+  bottom: -14px;
+}
+.circle2:before {
+  content: "";
+  position: absolute;
+  width: 20px;
+  padding: 20px 20px;
+  border-radius: 50%;
+  right: 0px;
+  bottom: 0px;
+
+}
+.circle3 {
+  border: 5px solid black;
+  background-color: white;
+  position: absolute;
+  width: 15px;
+  padding: 16px 17px;
+  border-radius: 50%;
+  left: -103px;
+  bottom: -38px;
+}
+
+.circle4 {
+  border: 5px solid black;
+  background-color: white;
+  position: absolute;
+  width: 5px;
+  padding: 13px 18px;
+  border-radius: 50%;
+  left: -140px;
+  bottom: -58px;
+}
+
+.circle5 {
+  border: 5px solid black;
+  background-color: white;
+  position: absolute;
+  width: 5px;
+  padding: 7px 8px;
+  border-radius: 50%;
+  left: -162px;
+  bottom: -69px;
 }
