--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,6 @@ body {
   font-family: 'Bangers', cursive;
 }
 
-body, html {
-  height: 100%;
-}
 
 /* home page */
 .home-banner {
@@ -31,7 +28,8 @@ body, html {
   color: white;
   
 }
-
+/* png/web.png
+css/style.css */
 button {
   padding: 14px 40px;
   margin-top: 30px;
@@ -40,7 +38,7 @@ button {
   background-color: blue;
   border: none;
   text-shadow: 2px 2px 5px white;
-  cursor: pointer;
+  cursor: url('../png/web2.png'), auto !important;
   font-family: 'Bangers', cursive;
 }
 button:hover {
@@ -50,11 +48,11 @@ button:hover {
   color: white;
   border: none;
   background-color: red;
-  cursor: pointer;
+  cursor: url('../png/web2.png'), auto !important;
 }
 /*spritesheet*/
 .back-img {
-background-color: black;
+ background-color: black;
  background-image: url("https://images.unsplash.com/photo-1503221043305-f7498f8b7888?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1470&q=80");
  background-repeat: no-repeat;
  width: 100%;
@@ -83,7 +81,7 @@ background-color: black;
   font-size: 16px;
   margin: 4px 2px;
   transition-duration: 0.4s;
-  cursor: pointer;
+  cursor: url('../png/web2.png'), auto !important;
 }
 
 .button2{
@@ -130,7 +128,7 @@ background-color: black;
 /* end page  */
 .end-banner {
 background-image: url("https://art.pixilart.com/200a8a80fdadea3.png");
-background-color: black;
+background-color: slategray;
  background-repeat: no-repeat;
   width: 100%;
   height: 100vh;
