--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ button:hover {
 /*spritesheet*/
 .back-img {
  background-color: black;
- background-image: url("https://ae01.alicdn.com/kf/HTB1auz7khSYBuNjSsphq6zGvVXaa/MEHOFOTO-Vinyl-Photography-Backdrops-Super-Heroes-Comics-Superman-Captain-Photo-Backgrounds-Photography-Studio-Backdrops-G-152.jpg");
+ background-image: url("https://i.pinimg.com/originals/05/5c/29/055c29606e725adcaaabd0fec620a9de.jpg");
  background-repeat: no-repeat;
  width: 100%;
  height: 100vh; 
