--- a/css/style.css
+++ b/css/style.css
@@ -1,312 +1,314 @@
 body {
-  margin-top: 0px;
-  margin-bottom: 0px;
-  margin-left: 0px;
-  margin-right: 0px;
-  padding: 0;
-  font-family: 'Bangers', cursive;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    padding: 0;
+    font-family: 'Bangers', cursive;
 }
 
 
 /* home page */
 .home-banner {
-  background-image: url("https://dinopixel.com/preload/0519/spiderman.png");
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 100vh;
-  background-color:slategray;
+    background-image: url("https://dinopixel.com/preload/0519/spiderman.png");
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100vh;
+    background-color: slategray;
 }
 
 .content {
-  position: absolute;
-  top: 250px;
-  right: 250px;
-  font-size: 18px;
+    position: absolute;
+    top: 250px;
+    right: 250px;
+    font-size: 18px;
 }
 
-.content h1{
-  color: white;
-  
+.content h1 {
+    color: white;
+
 }
 
 button {
-  padding: 14px 40px;
-  margin-top: 30px;
-  font-size: 20px;
-  color: white;
-  background-color: blue;
-  border: none;
-  cursor: url('../png/web2.png'), auto !important;
-  font-family: 'Bangers', cursive;
+    padding: 14px 40px;
+    margin-top: 30px;
+    font-size: 20px;
+    color: white;
+    background-color: blue;
+    border: none;
+    cursor: url('../png/web2.png'), auto !important;
+    font-family: 'Bangers', cursive;
 }
+
 button:hover {
-  padding: 14px 40px;
-  font-size: 20px;
-  background-size: cover;
-  color: white;
-  border: none;
-  background-color: red;
-  cursor: url('../png/web2.png'), auto !important;
+    padding: 14px 40px;
+    font-size: 20px;
+    background-size: cover;
+    color: white;
+    border: none;
+    background-color: red;
+    cursor: url('../png/web2.png'), auto !important;
 }
-/*spritesheet*/
+
+/* home page speech bubble */
+.circular-sb {
+    width: 500px;
+    border: 5px solid black;
+    padding: 80px 0px;
+    margin: -150px auto;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 900;
+    font-family: arial;
+    position: relative;
+    color: black;
+    background-color: white;
+    font-family: 'Bangers', cursive;
+}
+
+.circle1 {
+    border: 5px solid black;
+    position: absolute;
+    width: 25px;
+    padding: 25px 25px;
+    border-radius: 50%;
+    left: -10px;
+    bottom: 10px;
+}
+
+.circle1:before {
+    content: "";
+    position: absolute;
+    width: 25px;
+    padding: 25px 25px;
+    border-radius: 50%;
+    right: 0px;
+    bottom: 0px;
+    background: #fff;
+}
+
+.circle2 {
+    border: 5px solid black;
+    background-color: white;
+    position: absolute;
+    width: 20px;
+    padding: 20px 20px;
+    border-radius: 50%;
+    left: -62px;
+    bottom: -14px;
+}
+
+.circle2:before {
+    content: "";
+    position: absolute;
+    width: 20px;
+    padding: 20px 20px;
+    border-radius: 50%;
+    right: 0px;
+    bottom: 0px;
+
+}
+
+.circle3 {
+    border: 5px solid black;
+    background-color: white;
+    position: absolute;
+    width: 15px;
+    padding: 16px 17px;
+    border-radius: 50%;
+    left: -103px;
+    bottom: -38px;
+}
+
+.circle4 {
+    border: 5px solid black;
+    background-color: white;
+    position: absolute;
+    width: 5px;
+    padding: 13px 18px;
+    border-radius: 50%;
+    left: -140px;
+    bottom: -58px;
+}
+
+.circle5 {
+    border: 5px solid black;
+    background-color: white;
+    position: absolute;
+    width: 5px;
+    padding: 7px 8px;
+    border-radius: 50%;
+    left: -162px;
+    bottom: -69px;
+}
+
+/*Journey*/
 .back-img {
- background-color: black;
- background-image: url("https://i.pinimg.com/originals/05/5c/29/055c29606e725adcaaabd0fec620a9de.jpg");
- background-repeat: no-repeat;
- width: 100%;
- height: 100vh; 
- background-size: cover; 
- background-position: center; 
- background-attachment: fixed ;
- background-size:100% 100%; 
-/* animation: appear 15s infinite;*/
+    background-color: black;
+    background-image: url("https://i.pinimg.com/originals/05/5c/29/055c29606e725adcaaabd0fec620a9de.jpg");
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-size: 100% 100%;
+    /* animation: appear 15s infinite;*/
 }
 
 .content2 {
-  position: absolute;
-  top: 50px;
-  right: 50px;
-  font-size: 18px;
+    position: absolute;
+    top: 50px;
+    right: 50px;
+    font-size: 18px;
 }
 
 .buttonsecond {
-  border: none;
-  color: white;
-  padding: 14px 40px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
-  cursor: url('../png/web2.png'), auto !important;
+    border: none;
+    color: white;
+    padding: 14px 40px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: url('../png/web2.png'), auto !important;
 }
 
-.button2{
-  color: white; 
-  font-size: 20px;
-  background-color: none !important; 
-  border: 2px solid #f44336;
-  font-family: 'Bangers', cursive;
+.button2 {
+    color: white;
+    font-size: 20px;
+    background-color: none !important;
+    border: 2px solid #f44336;
+    font-family: 'Bangers', cursive;
 }
 
 .button2:hover {
-  background-color: blue;
-  border: 2px solid blue;
+    background-color: blue;
+    border: 2px solid blue;
 }
 
+/*Journey spritesheet*/
 #runner {
-  background: url("http://pixelartmaker.com/art/687d3898039afaf.png");
-  position: relative;
-  top: 430px;
-  width: 232px;
-  height: 250px;
-  animation: run 0.5s steps(4) infinite,
-    forward 4s linear infinite;
+    background: url("http://pixelartmaker.com/art/687d3898039afaf.png");
+    position: relative;
+    top: 430px;
+    width: 232px;
+    height: 250px;
+    animation: run 0.5s steps(4) infinite,
+        forward 4s linear infinite;
 }
 
 @keyframes run {
-  0% {
-    background-position: 25px;
-  }
-  100% {
-    background-position: 1000px;
-  }
+    0% {
+        background-position: 25px;
+    }
+
+    100% {
+        background-position: 1000px;
+    }
 }
 
 @keyframes forward {
-  0% {
-    transform: translateX(-75px);
-  }
-  100% {
-    transform: translateX(1300px);
-  }
+    0% {
+        transform: translateX(-75px);
+    }
+
+    100% {
+        transform: translateX(1300px);
+    }
 }
 
 /* end page  */
 .end-banner {
-background-image: url("https://art.pixilart.com/200a8a80fdadea3.png");
-background-color: slategray;
- background-repeat: no-repeat;
-  width: 100%;
-  height: 100vh;
+    background-image: url("https://art.pixilart.com/200a8a80fdadea3.png");
+    background-color: slategray;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100vh;
 }
 
 .content3 {
-  position: absolute;
-  top: 50px;
-  right: 50px;
-  font-size: 18px;
+    position: absolute;
+    top: 50px;
+    right: 50px;
+    font-size: 18px;
 }
 
 .content3 h1 {
-  color: white;
+    color: white;
 }
 
 .circular-sbl {
-  width: 350px;
-  border: 5px solid black;
-  padding: 70px 20px;
-  margin: 35px auto;
-  border-radius: 50%;
-  text-align: center;
-  font-size: 24px;
-  font-weight: 900;
-  font-family: arial;
-  position: absolute;
-  top: -76px;
-  right: 826px;
-  color: black;
-  font-family: 'Bangers', cursive;
-  background-color: white;
+    width: 350px;
+    border: 5px solid black;
+    padding: 70px 20px;
+    margin: 35px auto;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 900;
+    font-family: arial;
+    position: absolute;
+    top: -76px;
+    right: 826px;
+    color: black;
+    font-family: 'Bangers', cursive;
+    background-color: white;
 }
 
 .circle1l {
-  border: 5px solid black;
-  position: absolute;
-  width: 25px;
-  padding: 20px;
-  border-radius: 50%;
-  right: 170px;
-  bottom: -25px;
+    border: 5px solid black;
+    position: absolute;
+    width: 25px;
+    padding: 20px;
+    border-radius: 50%;
+    right: 170px;
+    bottom: -25px;
 }
 
 .circle1l:before {
-  content: "";
-  position: absolute;
-  width: 25px;
-  padding: 20px;
-  border-radius: 50%;
-  right: 0px;
-  bottom: 0px;
-  background: #fff;
+    content: "";
+    position: absolute;
+    width: 25px;
+    padding: 20px;
+    border-radius: 50%;
+    right: 0px;
+    bottom: 0px;
+    background: #fff;
 }
 
 .circle2l {
-  border: 5px solid black;
-  position: absolute;
-  width: 5px;
-  padding: 13px 21px;
-  border-radius: 50%;
-  right: 163px;
-  bottom: -59px;
-  background-color: white;
+    border: 5px solid black;
+    position: absolute;
+    width: 5px;
+    padding: 13px 21px;
+    border-radius: 50%;
+    right: 163px;
+    bottom: -59px;
+    background-color: white;
 }
 
 .circle3l {
-  border: 5px solid black;
-  position: absolute;
-  width: 5px;
-  padding: 10px 18px;
-  border-radius: 50%;
-  right: 152px;
-  bottom: -87px;
-  background-color: white;
+    border: 5px solid black;
+    position: absolute;
+    width: 5px;
+    padding: 10px 18px;
+    border-radius: 50%;
+    right: 152px;
+    bottom: -87px;
+    background-color: white;
 }
 
 .circle4l {
-  border: 5px solid black;
-  position: absolute;
-  width: 5px;
-  padding: 7px 13px;
-  border-radius: 50%;
-  right: 143px;
-  bottom: -109px;
-  background-color: white;
-}
-
-
-
-
-
-
-/* speech bubble */
-.circular-sb {
-  width: 500px;
-  border: 5px solid black;
-  padding: 80px 0px;
-  margin: -150px auto;
-  border-radius: 50%;
-  text-align: center;
-  font-size: 24px;
-  font-weight: 900;
-  font-family: arial;
-  position: relative;
-  color: black;
-  background-color: white;
-  font-family: 'Bangers', cursive;
-}
-
-.circle1 {
-  border: 5px solid black;
-  position: absolute;
-  width: 25px;
-  padding: 25px 25px;
-  border-radius: 50%;
-  left: -10px;
-  bottom: 10px;
-}
-
-.circle1:before {
-  content: "";
-  position: absolute;
-  width: 25px;
-  padding: 25px 25px;
-  border-radius: 50%;
-  right: 0px;
-  bottom: 0px;
-  background: #fff;
-}
-
-.circle2 {
-  border: 5px solid black;
-  background-color: white;
-  position: absolute;
-  width: 20px;
-  padding: 20px 20px;
-  border-radius: 50%;
-  left: -62px;
-  bottom: -14px;
-}
-.circle2:before {
-  content: "";
-  position: absolute;
-  width: 20px;
-  padding: 20px 20px;
-  border-radius: 50%;
-  right: 0px;
-  bottom: 0px;
-
-}
-.circle3 {
-  border: 5px solid black;
-  background-color: white;
-  position: absolute;
-  width: 15px;
-  padding: 16px 17px;
-  border-radius: 50%;
-  left: -103px;
-  bottom: -38px;
-}
-
-.circle4 {
-  border: 5px solid black;
-  background-color: white;
-  position: absolute;
-  width: 5px;
-  padding: 13px 18px;
-  border-radius: 50%;
-  left: -140px;
-  bottom: -58px;
-}
-
-.circle5 {
-  border: 5px solid black;
-  background-color: white;
-  position: absolute;
-  width: 5px;
-  padding: 7px 8px;
-  border-radius: 50%;
-  left: -162px;
-  bottom: -69px;
+    border: 5px solid black;
+    position: absolute;
+    width: 5px;
+    padding: 7px 13px;
+    border-radius: 50%;
+    right: 143px;
+    bottom: -109px;
+    background-color: white;
 }
